var. changes review