@@ -8,12 +8,15 @@ import lombok.Builder;
 import lombok.Getter;
 import org.neo4j.driver.AuthTokens;
 import org.neo4j.driver.GraphDatabase;
+import org.neo4j.driver.Result;
 import org.neo4j.driver.Session;
+import org.neo4j.driver.Value;
 import org.neo4j.driver.Values;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static dev.langchain4j.internal.Utils.getOrDefault;
@@ -47,8 +50,13 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
     private final String indexName;
     private final String metadataPrefix;
     private final String embeddingProperty;
+    private final String idProperty;
+    private final String sanitizedEmbeddingProperty;
+    private final String sanitizedIdProperty;
     private final String label;
+    private final String sanitizedLabel;
     private final String text;
+    private final String databaseName;
 
     /**
      * Creates an instance of Neo4jEmbeddingStore defining a {@link Driver} 
@@ -66,11 +74,13 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
      * @param dimension: the dimension (required)
      * @param config: the {@link SessionConfig}  (optional, default is `SessionConfig.forDatabase("neo4j")`)
      * @param label: the optional label name (default: "Document")
-     * @param property: the optional property name (default: "embedding")
+     * @param embeddingProperty: the optional embeddingProperty name (default: "embedding")
+     * @param idProperty: the optional id property name (default: "id")
      * @param distanceType: the optional distanceType (default: "cosine")
      * @param metadataPrefix: the optional metadata prefix (default: "")
      * @param text: the optional text property name (default: "text")
      * @param indexName: the optional index name (default: "langchain-embedding-index")
+     * @param databaseName: the optional database name (default: "neo4j")
      */
     @Builder
     public Neo4jEmbeddingStore(
@@ -78,27 +88,37 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
             Driver driver,
             int dimension,
             String label,
-            String property,
+            String embeddingProperty,
+            String idProperty,
             Neo4jDistanceType distanceType,
             String metadataPrefix,
             String text,
-            String indexName) {
+            String indexName,
+            String databaseName) {
         
         /* required configs */
-        ensureNotNull(driver, "driver");
-        ensureNotNull(dimension, "dimension");
+        this.driver = ensureNotNull(driver, "driver");
+        this.dimension = ensureBetween(dimension, 0, 4096, "dimension");
 
-        this.driver = driver;
-        this.dimension = dimension;
-        
         /* optional configs */
-        this.config = getOrDefault(config, SessionConfig.forDatabase("neo4j"));
+        this.databaseName = getOrDefault(databaseName, DEFAULT_DATABASE_NAME);
+        this.config = getOrDefault(config, SessionConfig.forDatabase(this.databaseName));
+        
         this.label = getOrDefault(label, DEFAULT_LABEL);
-        this.embeddingProperty = getOrDefault(property, DEFAULT_EMBEDDING_PROP);
+
+        this.embeddingProperty = getOrDefault(embeddingProperty, DEFAULT_EMBEDDING_PROP);
+        
+        this.idProperty = getOrDefault(idProperty, DEFAULT_ID_PROP);
+        
         this.distanceType = getOrDefault(distanceType, Neo4jDistanceType.COSINE);
         this.indexName = getOrDefault(indexName, DEFAULT_IDX_NAME);
         this.metadataPrefix = getOrDefault(metadataPrefix, "");
         this.text = getOrDefault(text, DEFAULT_TEXT_PROP);
+
+        /* sanitize labels and property names, to prevent from Cypher Injections */
+        this.sanitizedLabel = sanitizeOrThrows(this.label, "label");
+        this.sanitizedEmbeddingProperty = sanitizeOrThrows(this.embeddingProperty, "embeddingProperty");
+        this.sanitizedIdProperty = sanitizeOrThrows(this.idProperty, "idProperty");
         
         /* auto-index creation */
         createIndexIfNotExist();
@@ -136,30 +156,29 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
     public List<String> addAll(List<Embedding> embeddings, List<TextSegment> embedded) {
         List<String> ids = embeddings.stream()
                 .map(ignored -> randomUUID())
-                .toList();
+                .collect(Collectors.toList());
         addAllInternal(ids, embeddings, embedded);
         return ids;
     }
 
     @Override
     public List<EmbeddingMatch<TextSegment>> findRelevant(Embedding referenceEmbedding, int maxResults, double minScore) {
-        var embeddingValue = Values.value(referenceEmbedding.vector());
+        Value embeddingValue = Values.value(referenceEmbedding.vector());
         
-        try (var session = session()) {
+        try (Session session = session()) {
+            Map<String, Object> params = new HashMap<>();
+            params.put("indexName", indexName);
+            params.put("embeddingValue", embeddingValue);
+            params.put("minScore", minScore);
+            params.put("maxResults", maxResults);
             return session
-                    .run("""
-						CALL db.index.vector.queryNodes($indexName, $maxResults, $embeddingValue)
-						YIELD node, score
-						WHERE score >= $minScore
-						RETURN node, score
-						""", Map.of("indexName", indexName,
-                            "embeddingValue", embeddingValue,
-                            "minScore", minScore,
-                            "maxResults", maxResults))
+                    .run("CALL db.index.vector.queryNodes($indexName, $maxResults, $embeddingValue)\n" +
+                         "YIELD node, score\n" +
+                         "WHERE score >= $minScore\n" +
+                         "RETURN node, score\n", params)
                     .list(item -> Neo4jEmbeddingUtils.toEmbeddingMatch(this, item));
         }
     }
-
 
     /*
     Private methods
@@ -181,31 +200,28 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
     }
 
     private void bulk(List<String> ids, List<Embedding> embeddings, List<TextSegment> embedded) {
+        Collection<List<Map<String, Object>>> rowsBatched = getRowsBatched(this, ids, embeddings, embedded);
 
-        List<Map<String, Object>> rows = IntStream.range(0, ids.size())
-                .mapToObj(idx -> toRecord(this, idx, ids, embeddings, embedded))
-                .toList();
+        rowsBatched.forEach(rows -> {
+            try (Session session = session()) {
+                String statement = String.format("UNWIND $rows AS row\n" +
+                                     "MERGE (u:%1$s {%2$s: row.%2$s})\n" +
+                                     "SET u += row.%3$s\n" +
+                                     "WITH row, u\n" +
+                                     "CALL db.create.setNodeVectorProperty(u, $embeddingProperty, row.%4$s)\n" +
+                                     "RETURN count(*)",
+                        this.sanitizedLabel,
+                        this.sanitizedIdProperty,
+                        PROPS,
+                        EMBEDDINGS_ROW_KEY);
 
-        try (var session = session()) {
-            String statement = """
-                            UNWIND $rows AS row
-                            MERGE (u:%1$s {%2$s: row.%2$s})
-                            SET u += row.%3$s
-                            WITH row, u
-                            CALL db.create.setNodeVectorProperty(u, $embeddingProperty, row.%4$s)
-                            RETURN *""".formatted(
-                    this.label,
-                    ID_ROW_KEY,
-                    PROPS,
-                    EMBEDDINGS_ROW_KEY);
+                Map<String, Object> params = new HashMap<>();
+                params.put("rows", rows);
+                params.put("embeddingProperty", this.embeddingProperty);
 
-            Map<String, Object> params = Map.of(
-                    "rows", rows,
-                    "embeddingProperty", this.embeddingProperty
-            );
-            
-            session.run(statement, params).consume();
-        }
+                session.run(statement, params).consume();
+            }
+        });
     }
 
     private void createIndexIfNotExist() {
@@ -215,22 +231,39 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
     }
 
     private boolean indexExists() {
-        try (var session = session()) {
-            Map<String, Object> params = Map.of("name", this.indexName);
-            return session.run("SHOW INDEX WHERE type = 'VECTOR' AND name = $name", params)
-                    .hasNext();
+        try (Session session = session()) {
+            Map<String, Object> params = new HashMap<>();
+            params.put("name", this.indexName);
+            Result run = session.run("SHOW INDEX WHERE type = 'VECTOR' AND name = $name", params);
+            if (!run.hasNext()) {
+                return false;
+            }
+            List<String> idxLabels = run.next()
+                    .get("labelsOrTypes")
+                    .asList(Value::asString);
+            if (!idxLabels.equals(Collections.singletonList(this.label))) {
+                String errMessage = String.format("It's not possible to create an index for the label `%s`, \n" +
+                                 "as there is another index with name `%s` with different label(s) (i.e. `%s`).\n" +
+                                 "Please provide another indexName to create the vector index, or delete the existing one",
+                        this.label,
+                        this.indexName,
+                        idxLabels);
+                throw new RuntimeException(errMessage);
+            }
+            return true;
         }
     }
 
     private void createIndex() {
-        Map<String, Object> params = Map.of("indexName", this.indexName,
-                "label", this.label,
-                "embeddingProperty", this.embeddingProperty,
-                "dimension", this.dimension,
-                "distanceType", this.distanceType.getValue());
+        Map<String, Object> params = new HashMap<>();
+        params.put("indexName", this.indexName);
+        params.put("label", this.label);
+        params.put("embeddingProperty", this.embeddingProperty);
+        params.put("dimension", this.dimension);
+        params.put("distanceType", this.distanceType.getValue());
 
         // create vector index
-        try (var session = session()) {
+        try (Session session = session()) {
             session.run("CALL db.index.vector.createNodeIndex($indexName, $label, $embeddingProperty, $dimension, $distanceType)",
                     params);
 
