@@ -13,6 +13,7 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.neo4j.cypherdsl.support.schema_name.SchemaNames;
 import org.neo4j.driver.AuthTokens;
 import org.neo4j.driver.Driver;
 import org.neo4j.driver.GraphDatabase;
@@ -25,27 +26,33 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.utility.DockerImageName;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Consumer;
 
 import static dev.langchain4j.internal.Utils.randomUUID;
 import static dev.langchain4j.store.embedding.neo4j.Neo4jEmbeddingUtils.DEFAULT_EMBEDDING_PROP;
-import static dev.langchain4j.store.embedding.neo4j.Neo4jEmbeddingUtils.DEFAULT_LABEL;
+import static dev.langchain4j.store.embedding.neo4j.Neo4jEmbeddingUtils.DEFAULT_ID_PROP;
 import static dev.langchain4j.store.embedding.neo4j.Neo4jEmbeddingUtils.DEFAULT_TEXT_PROP;
-import static dev.langchain4j.store.embedding.neo4j.Neo4jEmbeddingUtils.ID_ROW_KEY;
 import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
 import static org.assertj.core.data.Percentage.withPercentage;
 
-@Testcontainers
+//@Testcontainers
 class Neo4jEmbeddingStoreTest {
 
     public static final String USERNAME = "neo4j";
     public static final String ADMIN_PASSWORD = "adminPass";
-    @Container
-    static Neo4jContainer<?> neo4jContainer = new Neo4jContainer<>(DockerImageName.parse("neo4j:5.13"))
-            .withAdminPassword(ADMIN_PASSWORD);
+//    public static final String LABEL_TO_SANITIZE = "Document1";
+//    public static final String LABEL_TO_SANITIZE = "Document22";
+    public static final String LABEL_TO_SANITIZE = "Label ` to \\ sanitize";
+    
+//    @Container
+//    static Neo4jContainer<?> neo4jContainer = new Neo4jContainer<>(DockerImageName.parse("neo4j:5.14.0-enterprise"))
+//            .withAdminPassword(ADMIN_PASSWORD);
 
     private static final String METADATA_KEY = "test-key";
 
@@ -57,27 +64,36 @@ class Neo4jEmbeddingStoreTest {
 
     @BeforeAll
     static void startContainer() {
-        neo4jContainer.start();
-        Driver driver = GraphDatabase.driver(neo4jContainer.getBoltUrl(), AuthTokens.basic(USERNAME, ADMIN_PASSWORD));
+//        neo4jContainer.start();
+        Driver driver = GraphDatabase.driver("bolt://localhost:7687", AuthTokens.basic("neo4j", "apoc1234"));
+//        Driver driver = GraphDatabase.driver(neo4jContainer.getBoltUrl(), AuthTokens.basic(USERNAME, ADMIN_PASSWORD));
         session = driver.session();
     }
 
     @BeforeEach
     void initEmptyNeo4jEmbeddingStore() {
         embeddingStore = Neo4jEmbeddingStore.builder()
-                .withBasicAuth(neo4jContainer.getBoltUrl(), USERNAME, ADMIN_PASSWORD)
+                .withBasicAuth("bolt://localhost:7687", "neo4j", "apoc1234")
                 .dimension(384)
+                .label(LABEL_TO_SANITIZE)
                 .build();
+//        embeddingStore = Neo4jEmbeddingStore.builder()
+//                .withBasicAuth(neo4jContainer.getBoltUrl(), USERNAME, ADMIN_PASSWORD)
+//                .dimension(384)
+//                .label(LABEL_TO_SANITIZE)
+//                .build();
     }
 
     @AfterEach
     void afterEach() {
         session.run("MATCH (n) DETACH DELETE n");
+//        String indexName = ((Neo4jEmbeddingStore) embeddingStore).getIndexName();
+//        session.run("DROP INDEX " + SchemaNames.sanitize(indexName).get());
     }
 
     @Test
     void should_add_embedding() {
-        Embedding embedding = embeddingModel.embed(randomUUID()).content();
+        Embedding embedding = embeddingModel.embed("embedText").content();
 
         String id = embeddingStore.add(embedding);
         assertThat(id).isNotNull();
@@ -99,7 +115,7 @@ class Neo4jEmbeddingStoreTest {
     void should_add_embedding_with_id() {
 
         String id = randomUUID();
-        Embedding embedding = embeddingModel.embed(randomUUID()).content();
+        Embedding embedding = embeddingModel.embed("embedText").content();
 
         embeddingStore.add(id, embedding);
 
@@ -111,7 +127,6 @@ class Neo4jEmbeddingStoreTest {
         assertThat(match.embeddingId()).isEqualTo(id);
         assertThat(match.embedding()).isEqualTo(embedding);
         assertThat(match.embedded()).isNull();
-
 
         checkEntitiesCreated(relevant.size(), 
                 iterator -> checkDefaultProps(embedding, match, iterator.next()));
@@ -138,36 +153,42 @@ class Neo4jEmbeddingStoreTest {
 
         checkEntitiesCreated(relevant.size(), 
                 iterator -> {
-            List<String> otherProps = List.of(DEFAULT_TEXT_PROP);
+            List<String> otherProps = Collections.singletonList(DEFAULT_TEXT_PROP);
             checkDefaultProps(embedding, match, iterator.next(), otherProps);
         });
     }
 
     @Test
     void should_add_embedding_with_segment_with_metadata() {
-        checkSegmentWithMetadata(METADATA_KEY);
+        checkSegmentWithMetadata(METADATA_KEY, LABEL_TO_SANITIZE);
     }
 
     @Test
     void should_add_embedding_with_segment_with_custom_metadata_prefix() {
         String metadataPrefix = "metadata.";
+//        embeddingStore = Neo4jEmbeddingStore.builder()
+//                .withBasicAuth(neo4jContainer.getBoltUrl(), USERNAME, ADMIN_PASSWORD)
+//                .dimension(384)
+//                .metadataPrefix(metadataPrefix)
+//                .build();
         embeddingStore = Neo4jEmbeddingStore.builder()
-                .withBasicAuth(neo4jContainer.getBoltUrl(), USERNAME, ADMIN_PASSWORD)
+                .withBasicAuth("bolt://localhost:7687", "neo4j", "apoc1234")
                 .dimension(384)
                 .metadataPrefix(metadataPrefix)
+                .label("CustomLabelName")
+                .indexName("customIdxName")
                 .build();
         
         String metadataCompleteKey = metadataPrefix + METADATA_KEY;
 
-        checkSegmentWithMetadata(metadataCompleteKey);
+        checkSegmentWithMetadata(metadataCompleteKey, "CustomLabelName");
     }
 
 
     @Test
     void should_add_multiple_embeddings() {
-
-        Embedding firstEmbedding = embeddingModel.embed(randomUUID()).content();
-        Embedding secondEmbedding = embeddingModel.embed(randomUUID()).content();
+        Embedding firstEmbedding = embeddingModel.embed("firstEmbedText").content();
+        Embedding secondEmbedding = embeddingModel.embed("secondEmbedText").content();
 
         List<String> ids = embeddingStore.addAll(asList(firstEmbedding, secondEmbedding));
         assertThat(ids).hasSize(2);
@@ -225,7 +246,7 @@ class Neo4jEmbeddingStoreTest {
 
         checkEntitiesCreated(relevant.size(), 
                 iterator -> {
-            List<String> otherProps = List.of(DEFAULT_TEXT_PROP);
+            List<String> otherProps = Collections.singletonList(DEFAULT_TEXT_PROP);
             checkDefaultProps(firstEmbedding, firstMatch, iterator.next(), otherProps);
             checkDefaultProps(secondEmbedding, secondMatch, iterator.next(), otherProps);
         });
@@ -235,11 +256,11 @@ class Neo4jEmbeddingStoreTest {
     void should_find_with_min_score() {
 
         String firstId = randomUUID();
-        Embedding firstEmbedding = embeddingModel.embed(randomUUID()).content();
+        Embedding firstEmbedding = embeddingModel.embed("firstEmbedText").content();
         embeddingStore.add(firstId, firstEmbedding);
 
         String secondId = randomUUID();
-        Embedding secondEmbedding = embeddingModel.embed(randomUUID()).content();
+        Embedding secondEmbedding = embeddingModel.embed("secondEmbedText").content();
         embeddingStore.add(secondId, secondEmbedding);
 
         List<EmbeddingMatch<TextSegment>> relevant = embeddingStore.findRelevant(firstEmbedding, 10);
@@ -307,7 +328,41 @@ class Neo4jEmbeddingStoreTest {
                 iterator -> checkDefaultProps(embedding, match, iterator.next()));
     }
 
-    private void checkSegmentWithMetadata(String metadataKey) {
+    @Test
+    void should_throw_error_if_another_index_name_with_different_label_exists() {
+        String metadataPrefix = "metadata.";
+//        embeddingStore = Neo4jEmbeddingStore.builder()
+//                .withBasicAuth(neo4jContainer.getBoltUrl(), USERNAME, ADMIN_PASSWORD)
+//                .dimension(384)
+//                .metadataPrefix(metadataPrefix)
+//                .build();
+
+        String idxName = "WillFail";
+        
+        embeddingStore = Neo4jEmbeddingStore.builder()
+                .withBasicAuth("bolt://localhost:7687", "neo4j", "apoc1234")
+                .dimension(384)
+                .indexName(idxName)
+                .metadataPrefix(metadataPrefix)
+                .build();
+
+        String secondLabel = "Second label";
+        try {
+            embeddingStore = Neo4jEmbeddingStore.builder()
+                    .withBasicAuth("bolt://localhost:7687", "neo4j", "apoc1234")
+                    .dimension(384)
+                    .label(secondLabel)
+                    .indexName(idxName)
+                    .metadataPrefix(metadataPrefix)
+                    .build();
+            fail("Should fail due to idx conflict");
+        } catch (RuntimeException e) {
+            String errMsg = String.format("It's not possible to create an index for the label `%s`", secondLabel);
+            assertThat(e.getMessage()).contains(errMsg);
+        }
+    }
+
+    private void checkSegmentWithMetadata(String metadataKey, String labelName) {
         TextSegment segment = TextSegment.from(randomUUID(), Metadata.from(METADATA_KEY, "test-value"));
         Embedding embedding = embeddingModel.embed(segment.text()).content();
 
@@ -323,15 +378,19 @@ class Neo4jEmbeddingStoreTest {
         assertThat(match.embedding()).isEqualTo(embedding);
         assertThat(match.embedded()).isEqualTo(segment);
 
-        checkEntitiesCreated(relevant.size(),
+        checkEntitiesCreated(relevant.size(), labelName,
                 iterator -> {
-                    List<String> otherProps = List.of(DEFAULT_TEXT_PROP, metadataKey);
+                    List<String> otherProps = Arrays.asList(DEFAULT_TEXT_PROP, metadataKey);
                     checkDefaultProps(embedding, match, iterator.next(), otherProps);
                 });
     }
 
     private void checkEntitiesCreated(int expectedSize, Consumer<Iterator<Node>> nodeConsumer) {
-        String query = "MATCH (n:%s) RETURN n".formatted(DEFAULT_LABEL);
+        checkEntitiesCreated(expectedSize, LABEL_TO_SANITIZE, nodeConsumer);
+    }
+
+    private void checkEntitiesCreated(int expectedSize, String labelName, Consumer<Iterator<Node>> nodeConsumer) {
+        String query = String.format("MATCH (n:%s) RETURN n", SchemaNames.sanitize(labelName).get());
         
         List<Node> n = session.run(query)
                 .list(i -> i.get("n").asNode());
@@ -345,13 +404,13 @@ class Neo4jEmbeddingStoreTest {
     }
 
     private void checkDefaultProps(Embedding embedding, EmbeddingMatch<TextSegment> match, Node node) {
-        checkDefaultProps(embedding, match, node, List.of());
+        checkDefaultProps(embedding, match, node, Collections.emptyList());
     }
 
     private void checkDefaultProps(Embedding embedding, EmbeddingMatch<TextSegment> match, Node node, List<String> otherProps) {
         checkPropKeys(node, otherProps);
 
-        assertThat(node.get(ID_ROW_KEY).asString()).isEqualTo(match.embeddingId());
+        assertThat(node.get(DEFAULT_ID_PROP).asString()).isEqualTo(match.embeddingId());
 
         List<Float> floats = node.get(DEFAULT_EMBEDDING_PROP).asList(Value::asFloat);
         assertThat(floats).isEqualTo(embedding.vectorAsList());
@@ -360,7 +419,7 @@ class Neo4jEmbeddingStoreTest {
     private void checkPropKeys(Node node, List<String> otherProps) {
         List<String> strings = new ArrayList<>();
         // default props
-        strings.add(ID_ROW_KEY);
+        strings.add(DEFAULT_ID_PROP);
         strings.add(DEFAULT_EMBEDDING_PROP);
         // other props
         strings.addAll(otherProps);
